--- a/HTML5/css3.html
+++ b/HTML5/css3.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 <title>Learning HTML 5</title>
 <meta name="description" content="start" />
@@ -8,88 +8,147 @@
 </head>
 <body>
 <div id="container">
-<div class="book-page" id="cover">
-  <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
-  <h2 class="book-author">Dan Cederholm</h2>
-  <h2 class="book-seller">Foreword by <em>Jeffrey Zeldman</em></h2>
-  <p class="book-description">Brief books for people who make websites</p>
-  <p class="book-press">A Book Apart</p>
-  <p class="book-series">No. <strong>2</strong></p>
-</div>
-<div class="book-page" id="title-page">
-  <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
-  <h2 class="book-author">Dan Cederholm</h2>
-</div>
-<div class="book-page">
-  <h3 class="page-title">Table of contents</h3>
-  <ol class="contents">
-    <li>
-      <dl>
-        <dt>Chapter 1</dt>
-        <dd>Using CSS3 Today</dd>
-        <dd>1</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 2</dt>
-        <dd>Understanding CSS Transitions</dd>
-        <dd>15</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 3</dt>
-        <dd>Hover-Crafting with CSS3</dd>
-        <dd>28</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 4</dt>
-        <dd>Transforming the Message</dd>
-        <dd>53</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 5</dt>
-        <dd>Multiple Backgrounds</dd>
-        <dd>82</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 6</dt>
-        <dd>Enriching Forms</dd>
-        <dd>92</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt>Chapter 7</dt>
-        <dd>Conclusion</dd>
-        <dd>116</dd>
-      </dl>
-    </li>
-    <li>
-      <dl>
-        <dt></dt>
-        <dd>Index</dd>
-        <dd>122</dd>
-      </dl>
-    </li>
-  </ol>
-</div>
-<div class="book-page">
-  <h2 class="page-title">Foreword</h2>
-  <div class="page-content">
-  <p>Websites are not the same as pictures of websites. When one person designs in Photoshop and another converts the design to markup and CSS, the coder must make guesses and assumptions about what the designer intended. This interpretive process is never without friction—unless the coder is Dan Cederholm. When Dan codes other people’s designs, he gets everything right, including the parts the designer got wrong. For instance, Dan inevitably translates a designer’s fixed Photoshop dimensions into code that is flexible, accessible, and bulletproof. (Indeed, Dan coined the phrase “bulletproof web design” while teaching the rest of us how to do it.) </p>
-  <p>In Dan’s case, flexible never means sloppy. The details always matter. That’s because Dan is not only a brilliant front-end developer and user advocate, he is also a designer to his core. He dreams design, bleeds design, and even gave the world a new way to share design at dribbble.com. Dan is also a born teacher and funny guy whose deadpan delivery makes Steven Wright look giddy by comparison. Dan speaks all over, helping designers improve their craft, and he not only educates, he kills.</p>
-  <p>And that, my friends, is why we’ve asked him to be our (and your) guide to CSS3. You couldn’t ask for a smarter, more experienced, more design-focused guide or a bigger web stan dards geek than our man Dan. Enjoy the trip!</p>
-  <p>—Jeffrey Zeldman</p>
+  <div class="book-page" id="test201605202">
+    <h2 class="page-title">screenWidth: <strong></strong></h2>
+	<div class="page-content">
+	  <h1>中国各地开展大规模抄党章运动</h1>
+	  <p>中国正在各地开展大规模两学一做运动，而所谓的两学一做是指“学党章党规、学系列讲话，做合格党员”，这一意识形态运动以“手抄党章100天”为其具体呈现，以至于出现了“南昌铁路局一对新婚夫妇在新婚之夜抄党章”的摆拍，抄党章变成了一个互联网流行词，可能出乎宣传官员的意料。党媒《人民日报》在其网站上发表了一篇似乎不含讽刺意味的评论，“作为一名党员，学习党章是非常必要的，然而党员也只是一位普通人，会有儿女情长、会有七情六欲。” </p>
+	</div>
+	<div></div>
+	<form>
+	  <label>Name <input type="text" /></label>
+	  <label>Email <input type="email" /></label>
+	  <label>Password <input type="password" /></label>
+	  <br />
+	  Gender: <label>Female<input type="radio" name="gender" value="female" /><span></span></label> <label>Male<input type="radio" name="gender" value="male" /><span></span></label>
+	  <br />
+	  <label><input type="checkbox" name="tos" />I have read the agreement<span></span></label>
+	  <br />
+	  <label><input type="checkbox" name="tos" disabled="true" />I agree with you.<span></span></label>
+	  <br />
+	  <textarea></textarea>
+	</form>
+	<h3 class="section-title">Icons</h3>
+	<ul class="photos">
+	  <li><img src="src/images/document.png" /></li>
+	  <li><img src="src/images/group.png" /></li>
+	  <li><img src="src/images/document.png" /></li>
+	  <li><img src="src/images/group.png" /></li>
+	</ul>
   </div>
-</div>
+  <div class="book-page" id="test20160520">
+    <h2 class="page-title">2016/05/20</h2>
+	<p>abcdef - 选择文字</p>
+	<div class="page-content">
+	  <p>123456</p>
+	  <p>一二三四五六</p>
+	</div>
+	<p>甲乙丙丁戊</p>
+	<p>金木水火土</p>
+	<h3 class="section-title">Nature</h3>
+	<ul class="photos">
+	  <li><img src="src/nature/01.jpg" /></li>
+	  <li><img src="src/nature/02.jpg" /></li>
+	  <li><img src="src/nature/03.jpg" /></li>
+	  <li><img src="src/nature/04.jpg" /></li>
+	</ul>
+	<h3 class="section-title">Animal</h3>
+	<ul class="photos">
+	  <li><img src="src/animal/01.jpg" /></li>
+	  <li><img src="src/animal/02.jpg" /></li>
+	  <li><img src="src/animal/03.jpg" /></li>
+	  <li><img src="src/animal/04.jpg" /></li>
+	</ul>
+	<h3 class="section-title">Icons</h3>
+	<ul class="photos">
+	  <li><img src="src/images/email.png" /></li>
+	  <li><img src="src/images/quest.png" /></li>
+	  <li><img src="src/images/friends.gif" /></li>
+	  <li><img src="src/images/msn.gif" /></li>
+	</ul>
+  </div>
+  <div class="book-page" id="cover">
+    <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
+    <h2 class="book-author">Dan Cederholm</h2>
+    <h2 class="book-seller">Foreword by <em>Jeffrey Zeldman</em></h2>
+    <p class="book-description">Brief books for people who make websites</p>
+    <p class="book-press">A Book Apart</p>
+    <p class="book-series">No. <strong>2</strong></p>
+  </div>
+  <div class="book-page" id="title-page">
+    <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
+    <h2 class="book-author">Dan Cederholm</h2>
+  </div>
+  <div class="book-page">
+    <h3 class="page-title">Table of contents</h3>
+    <ol class="contents">
+      <li>
+        <dl>
+          <dt>Chapter 1</dt>
+          <dd>Using CSS3 Today</dd>
+          <dd>1</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 2</dt>
+          <dd>Understanding CSS Transitions</dd>
+          <dd>15</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 3</dt>
+          <dd>Hover-Crafting with CSS3</dd>
+          <dd>28</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 4</dt>
+          <dd>Transforming the Message</dd>
+          <dd>53</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 5</dt>
+          <dd>Multiple Backgrounds</dd>
+          <dd>82</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 6</dt>
+          <dd>Enriching Forms</dd>
+          <dd>92</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>Chapter 7</dt>
+          <dd>Conclusion</dd>
+          <dd>116</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt></dt>
+          <dd>Index</dd>
+          <dd>122</dd>
+        </dl>
+      </li>
+    </ol>
+  </div>
+  <div class="book-page">
+    <h2 class="page-title">Foreword</h2>
+    <div class="page-content">
+      <p>Websites are not the same as pictures of websites. When one person designs in Photoshop and another converts the design to markup and CSS, the coder must make guesses and assumptions about what the designer intended. This interpretive process is never without friction—unless the coder is Dan Cederholm. When Dan codes other people’s designs, he gets everything right, including the parts the designer got wrong. For instance, Dan inevitably translates a designer’s fixed Photoshop dimensions into code that is flexible, accessible, and bulletproof. (Indeed, Dan coined the phrase “bulletproof web design” while teaching the rest of us how to do it.) </p>
+      <p>In Dan’s case, flexible never means sloppy. The details always matter. That’s because Dan is not only a brilliant front-end developer and user advocate, he is also a designer to his core. He dreams design, bleeds design, and even gave the world a new way to share design at dribbble.com. Dan is also a born teacher and funny guy whose deadpan delivery makes Steven Wright look giddy by comparison. Dan speaks all over, helping designers improve their craft, and he not only educates, he kills.</p>
+      <p>And that, my friends, is why we’ve asked him to be our (and your) guide to CSS3. You couldn’t ask for a smarter, more experienced, more design-focused guide or a bigger web stan dards geek than our man Dan. Enjoy the trip!</p>
+      <p>—Jeffrey Zeldman</p>
+    </div>
+  </div>
 </div>
 </body>
 </html>
