change the font of cover

--- a/HTML5/css3.html
+++ b/HTML5/css3.html
@@ -68,7 +68,7 @@
 	</ul>
   </div>
   <div class="book-page" id="cover">
-    <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
+    <h1 class="book-title"><em>CSS3</em> for <br/>Web Designers</h1>
     <h2 class="book-author">Dan Cederholm</h2>
     <h2 class="book-seller">Foreword by <em>Jeffrey Zeldman</em></h2>
     <p class="book-description">Brief books for people who make websites</p>
@@ -76,7 +76,7 @@
     <p class="book-series">No. <strong>2</strong></p>
   </div>
   <div class="book-page" id="title-page">
-    <h1 class="book-title"><em>CSS3</em> for Web Designers</h1>
+    <h1 class="book-title"><em>CSS3</em> for <br/>Web Designers</h1>
     <h2 class="book-author">Dan Cederholm</h2>
   </div>
   <div class="book-page">
