add some action

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <div class="box">
   <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
-  <p class="notice">Angel~ Angel~</p>
+  <div class="notice"><p></p><p>Hello you~</p></div>
   <ul class="links">
     <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook</a></li>
     <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter</a></li>
@@ -47,5 +47,5 @@
     <li class="icon_genius"><a href="https://github.com/qifei">Git</a></li>
   </ul>
 </div>
-<footer>&copy;2017 most rights reserved.</footer>
+<footer>&copy; 2017 most rights reserved.</footer>
 </html>
