--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width">
 <title>Profile</title>
 <link rel="stylesheet" href="style.css" />
 
@@ -10,27 +12,26 @@
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 -->
+
 <script type="text/javascript">
+// browser detect
+if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
+	// you're OK
+	console.log(location);
+} else {
+	alert('你的浏览器太老了，带你去下个新的');
+	location.href = 'http://outdatedbrowser.com';
+}
 
-  var _gaq = _gaq || [];
+//Google analytics
 
-  _gaq.push(['_setAccount', 'UA-1274130-3']);
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  _gaq.push(['_trackPageview']);
-
-
-
-  (function() {
-
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-
-  })();
-
-
+  ga('create', 'UA-1274130-3', 'auto');
+  ga('send', 'pageview');
 
 </script>
 </head>
@@ -40,11 +41,11 @@
   <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
   <div class="notice"><p></p><p>Hello you~</p></div>
   <ul class="links">
-    <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook</a></li>
-    <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter</a></li>
-    <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress</a></li>
-    <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr</a></li>
-    <li class="icon_genius"><a href="https://github.com/qifei">Git</a></li>
+    <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a></li>
+    <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a></li>
+    <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a></li>
+    <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a></li>
+    <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a></li>
   </ul>
 </div>
 <footer>&copy; 2017 most rights reserved.</footer>
