--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
 <meta name="viewport" content="width=device-width">
 <title>Profile</title>
 <link rel="stylesheet" href="style.css" />
-
-<!--
-<link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
--->
-
 <script type="text/javascript">
 // browser detect
 if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
@@ -35,17 +28,16 @@ if('querySelector' in document && 'localStorage' in window && 'addEventListener'
 
 </script>
 </head>
-
 <body>
 <div class="box">
   <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
   <div class="notice"><p></p><p>Hello you~</p></div>
   <ul class="links">
-    <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a></li>
-    <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a></li>
-    <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a></li>
-    <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a></li>
-    <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a></li>
+    <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a><i></i></li>
+    <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a><i></i></li>
+    <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a><i></i></li>
+    <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a><i></i></li>
+    <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a><i></i></li>
   </ul>
 </div>
 <footer>&copy; 2017 most rights reserved.</footer>
