--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
-<html>
+<html lang="zh-TW">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width">
-<title>Profile</title>
-<link rel="stylesheet" href="style.css" />
-<script type="text/javascript">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
+  <title>Profile</title>
+  <link rel="stylesheet" href="style.css" />
+  <script type="text/javascript">
 // browser detect
 if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
 	// you're OK
-	console.log(location);
 } else {
 	alert('你的浏览器太老了，带你去下个新的');
 	location.href = 'http://outdatedbrowser.com';
@@ -18,27 +17,27 @@ if('querySelector' in document && 'localStorage' in window && 'addEventListener'
 
 //Google analytics
 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-1274130-3', 'auto');
-  ga('send', 'pageview');
+ga('create', 'UA-1274130-3', 'auto');
+ga('send', 'pageview');
 
 </script>
 </head>
 <body>
-<div class="box">
-  <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
-  <div class="notice"><p></p><p>Hello you~</p></div>
-  <ul class="links">
-    <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a><i></i></li>
-    <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a><i></i></li>
-    <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a><i></i></li>
-    <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a><i></i></li>
-    <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a><i></i></li>
-  </ul>
-</div>
-<footer>&copy; 2017 most rights reserved.</footer>
-</html>
+  <div class="box">
+    <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
+    <div class="notice"><p></p><p>Hello you~</p></div>
+    <ul class="links">
+      <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a><i></i></li>
+      <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a><i></i></li>
+      <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a><i></i></li>
+      <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a><i></i></li>
+      <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a><i></i></li>
+    </ul>
+  </div>
+  <footer>&copy; 2017 most rights reserved.</footer>
+  </html>
