remove some trash words and mend the rating star

--- a/resume.html
+++ b/resume.html
@@ -139,7 +139,7 @@
               <div>
                 <p><b>社会主义大学</b></p>
                 <p class="title"><i>生存</i></p>
-                <p>学说话，学做事，学思考。下一段路，会遇到谁</p>
+                <p>学说话，学做事，学思考。</p>
               </div>
             </li>
           </ol>
