--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ if('querySelector' in document && 'localStorage' in window && 'addEventListener'
 	// you're OK
 } else {
 	alert('你的浏览器太老了，带你去下个新的');
-	location.href = 'http://outdatedbrowser.com';
+	//location.href = 'http://outdatedbrowser.com';
 }
 
 //Google analytics
