--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
   <link rel="stylesheet" href="style.css" />
+  <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
+  <!--[if lte IE 9]>
+  <link href="style-ie.css" rel="stylesheet" type="text/css">
+  <![endif]-->
   <script type="text/javascript">
 // browser detect
 if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
@@ -29,15 +33,15 @@ ga('send', 'pageview');
 </head>
 <body>
   <div class="box">
-    <div id="shutter"><p class="avatar"><b></b><i></i></p></div>
-    <div class="notice"><p></p><p>Hello you~</p></div>
+    <div id="shutter"><p class="avatar"><b><img src="images/photo_small.jpg" alt="photo"></b><i></i></p></div>
+    <div class="notice"><p class="yob">asdf</p><p>Hello you~</p></div>
     <ul class="links">
-      <li class="social_facebook"><a href="http://www.facebook.com/qifeidong/">Facebook profile</a><i></i></li>
-      <li class="social_twitter"><a href="http://www.twitter.com/qifei/">Twitter tweets</a><i></i></li>
-      <li class="social_wordpress"><a href="http://dongqifei.wordpress.com/">WordPress blog</a><i></i></li>
-      <li class="icon_camera_alt"><a href="http://www.flickr.com/dong/">Flickr photos</a><i></i></li>
-      <li class="icon_genius"><a href="https://github.com/qifei">Git repositories</a><i></i></li>
+      <li><span class="social_facebook"></span> <a href="http://www.facebook.com/qifeidong/">Facebook profile</a><i></i></li>
+      <li><span class="social_twitter"></span> <a href="http://www.twitter.com/qifei/">Twitter tweets</a><i></i></li>
+      <li><span class="social_wordpress"></span> <a href="http://dongqifei.wordpress.com/">WordPress blog</a><i></i></li>
+      <li><span class="icon_camera_alt"></span> <a href="http://www.flickr.com/dong/">Flickr photos</a><i></i></li>
+      <li><span class="icon_genius"> </span><a href="https://github.com/qifei">Git repositories</a><i></i></li>
     </ul>
   </div>
-  <footer>&copy; 2017 most rights reserved.</footer>
+  <div id="footer">&copy; 2017 most rights reserved.</div>
   </html>
