--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
-  <link rel="stylesheet" href="style.css" />
-  <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
-  <!--[if lte IE 9]>
-  <link href="style-ie.css" rel="stylesheet" type="text/css">
-  <![endif]-->
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/main.js"></script>
+  <!--[if lte IE 7]><script src="fonts/elegant_font/lte-ie7.js"></script><![endif]-->
+  <!--[if lte IE 9]><link href="style-ie.css" rel="stylesheet" type="text/css"><![endif]-->
 </head>
 <body>
   <div class="box">
@@ -28,7 +27,8 @@
     <h2>这个浏览器太老了</h2>
     <p>为了更佳的浏览体验和安全考量，请更新你的浏览器。 <a href="https://www.mozilla.org/en-US/firefox/all/" rel="nofollow" target="_blank" onclick="dismissWarning();">FireFox</a> , <a href="https://www.opera.com/" rel="nofollow" target="_blank" onclick="dismissWarning();">Opera</a> , <a href="https://www.google.com/chrome/" rel="nofollow" target="_blank" onclick="dismissWarning();">Chrome</a> , <a href="https://browser-update.org/zh/update.html?force_outdated=true" rel="nofollow" target="_blank" onclick="dismissWarning();">更多...</a></p>
   </div>
-<script type="text/javascript">
+  <script src="js/bundle.js"></script>
+<!-- <script type="text/javascript">
 // browser detect
 if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
   // you're OK
@@ -51,6 +51,6 @@ function dismissWarning() {
 ga('create', 'UA-1274130-3', 'auto');
 ga('send', 'pageview');
 
-</script>
+</script> -->
   </body>
   </html>
