--- a/resume.html
+++ b/resume.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
   <title>résumé</title>
-  <link href="resume.css" rel="stylesheet" type="text/css">
-  <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
+  <link href="css/resume.css" rel="stylesheet" type="text/css">
+  <!--[if lte IE 7]><script src="fonts/elegant_font/lte-ie7.js"></script><![endif]-->
   <!--[if lte IE 9]>
-  <link href="resume-ie.css" rel="stylesheet" type="text/css">
+  <link href="css/resume-ie.css" rel="stylesheet" type="text/css">
   <![endif]-->
 </head>
 <body>
