--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/main.js"></script>
   <!--[if lte IE 7]><script src="fonts/elegant_font/lte-ie7.js"></script><![endif]-->
-  <!--[if lte IE 9]><link href="style-ie.css" rel="stylesheet" type="text/css"><![endif]-->
+  <!--[if lte IE 9]><link href="css/style-ie.css" rel="stylesheet" type="text/css"><![endif]-->
 </head>
 <body>
   <div class="box">
