--- a/yc/index.html
+++ b/yc/index.html
@@ -9,6 +9,7 @@
 	<title>YouChain =+= 区块链资讯站</title>
 </head>
 <body>
+	<div id="particles-js"></div>
 	<a id="skippy" class="sr-only sr-only-focusable" href="#content">
 		<div class="container">
 			<span class="skiplink-text">Skip to main content</span>
@@ -358,6 +359,7 @@
 	<script src="assets/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
 	<script src="assets/popper.min.js" crossorigin="anonymous"></script>
 	<script src="assets/bootstrap-4.0.0-beta.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 	<!-- <script src="assets/jquery.easing.1.3.js" crossorigin="anonymous"></script> -->
 	<script src="assets/jQuery.Marquee/jquery.marquee.min.js" crossorigin="anonymous"></script>
 	<script type="text/javascript">
@@ -370,6 +372,10 @@
 				pauseOnHover: true,
 				startVisible: true
 			});
+		});
+		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+		particlesJS.load('particles-js', 'assets/particlesjs-config.json', function() {
+			console.log('callback - particles.js config loaded');
 		});
 	</script>
 </body>
