--- a/yc/index.html
+++ b/yc/index.html
@@ -17,7 +17,7 @@
 	</a>
 
 	<header>
-		<nav class="navbar bg-dark">
+		<nav class="navbar bg-dark" id="top-bar">
 			<div class="container">
 				<div class="marquee-price">
 					<ul class="price-list">
