--- a/yc/index.html
+++ b/yc/index.html
@@ -45,13 +45,13 @@
 						<source srcset="assets/blockchain.svg" type="image/svg+xml">
 						<img src="assets/blockchain.png" width="48" height="48" alt="Block-Chain">
 					</picture>
-					YouChain =+=
+					<span class="site-name">YouChain =+=</span>
 				</a>
 				<form class="form-inline row w-75 ml-3">
-					<div class="form-group col-8">
+					<div class="form-group col-md-8">
 						<input class="form-control mr-2 w-100" type="search" placeholder="比特币" aria-label="Search">
 					</div>
-					<div class="form-group col-4">
+					<div class="form-group col-md-4 justify-content-center">
 						<button class="btn btn-primary mr-2" type="submit">搜站点</button>
 						<button class="btn btn-outline-primary mr-2" type="submit">搜新闻</button>
 					</div>
@@ -63,7 +63,7 @@
 	<div id="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-8" id="column-main">
+				<div class="col-md-8" id="column-main">
 
 					<div class="block">
 						<div class="block-header"><h3><i class="fa fa-heartbeat" aria-hidden="true"></i> 热门推荐</h3></div>
@@ -268,7 +268,7 @@
 
 				</div>
 
-				<div class="col-sm-4" id="column-side">
+				<div class="col-md-4" id="column-side">
 
 					<div class="block">
 						<div class="block-header"><h3><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="#">区块查询</a></h3></div>
