--- a/yc/index.html
+++ b/yc/index.html
@@ -51,7 +51,7 @@
 					<div class="form-group col-md-8">
 						<input class="form-control mr-2 w-100" type="search" placeholder="比特币" aria-label="Search">
 					</div>
-					<div class="form-group col-md-4 justify-content-center">
+					<div class="form-group col-md-4">
 						<button class="btn btn-primary mr-2" type="submit">搜站点</button>
 						<button class="btn btn-outline-primary mr-2" type="submit">搜新闻</button>
 					</div>
