forbid to zoom on mobile device

--- a/cc/index.html
+++ b/cc/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=yes">
 	<link rel="stylesheet" href="assets/bootstrap-4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/font-awesome-5.0.6/css/fontawesome-all.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/style.css" crossorigin="anonymous">
