fix top padding, fix line break

--- a/cc/index.html
+++ b/cc/index.html
@@ -238,7 +238,7 @@
 									<div class="col"><label>区块查询:</label> <span><a href="https://www.bitcoin.com" target="_blank">https://www.bitcoin.com</a></span></div>
 								</div>
 								<div class="row">
-									<div class="col-md-4"><label>相关社区:</label></div>
+									<div class="col-md-2"><label>相关社区:</label></div>
 									<div class="col-md-8">
 										<ul class="link-list">
 											<li><a href="https://www.bitcoin.com" target="_blank">https://www.bitcoin.com</a></li>
@@ -252,9 +252,9 @@
 								<div class="row">
 									<div class="col"><label>简介:</label></div>
 									<div class="col-auto">
-										<div class="cc-brief">
-											<p>比特币（BitCoin）的概念最初由中本聪在2009年提出，根据中本聪的思路设计发布的开源软件以及建构其上的P2P网络。比特币是一种P2P形式的数字货币。点对点的传输意味着一个去中心化的支付系统。</p>
-											<p>与大多数货币不同，比特币不依靠特定货币机构发行，它依据特定算法，通过大量的计算产生，比特币经济使用整个P2P网络中众多节点构成的分布式数据库来确认并记录所有的交易行为，并使用密码学的设计来确保货币流通各个环节安全性。P2P的去中心化特性与算法本身可以确保无法通过大量制造比特币来人为操控币值。基于密码学的设计可以使比特币只能被真实的拥有者转移或支付。这同样确保了货币所有权与流通交易的匿名性。比特币与其他虚拟货币最大的不同，是其总数量非常有限，具有极强的稀缺性。该货币系统曾在4年内只有不超过1050万个，之后的总数量将被永久限制在2100万个。</p>
+										<div class="cc-intro">
+											<p>Bitcoin is a cryptocurrency and worldwide payment system.[9]:3 It is the first decentralized digital currency, as the system works without a central bank or single administrator.[9]:1[10] The network is peer-to-peer and transactions take place between users directly, without an intermediary.[9]:4 These transactions are verified by network nodes through the use of cryptography and recorded in a public distributed ledger called a blockchain. Bitcoin was invented by an unknown person or group of people under the name Satoshi Nakamoto[11] and released as open-source software in 2009.[12]</p>
+											<p>Bitcoins are created as a reward for a process known as mining. They can be exchanged for other currencies,[13] products, and services. As of February 2015, over 100,000 merchants and vendors accepted bitcoin as payment.[14] Research produced by the University of Cambridge estimates that in 2017, there are 2.9 to 5.8 million unique users using a cryptocurrency wallet, most of them using bitcoin.[15]</p>
 										</div>
 									</div>
 								</div>
