--- a/cc/index.html
+++ b/cc/index.html
@@ -250,8 +250,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col"><label>简介:</label></div>
-									<div class="col-auto">
+									<div class="col-md"><label>简介:</label></div>
+									<div class="col-md-auto">
 										<div class="cc-intro">
 											<p>Bitcoin is a cryptocurrency and worldwide payment system.[9]:3 It is the first decentralized digital currency, as the system works without a central bank or single administrator.[9]:1[10] The network is peer-to-peer and transactions take place between users directly, without an intermediary.[9]:4 These transactions are verified by network nodes through the use of cryptography and recorded in a public distributed ledger called a blockchain. Bitcoin was invented by an unknown person or group of people under the name Satoshi Nakamoto[11] and released as open-source software in 2009.[12]</p>
 											<p>Bitcoins are created as a reward for a process known as mining. They can be exchanged for other currencies,[13] products, and services. As of February 2015, over 100,000 merchants and vendors accepted bitcoin as payment.[14] Research produced by the University of Cambridge estimates that in 2017, there are 2.9 to 5.8 million unique users using a cryptocurrency wallet, most of them using bitcoin.[15]</p>
