--- a/cc/index.html
+++ b/cc/index.html
@@ -458,11 +458,11 @@
 
 		$( ".news-list-item a[role='load-btn']" ).click(function( event ) {
 				event.preventDefault();
-				var data-href = this.attr("data-href");
+				var dataHref = this.attr("data-href");
 				var container = $(this.attr("aria-controls"));
 				var str = this.attr("aria-controls")
 				var parent = $( str.replace("load-content", "news"));
-				container.load(data-href, function (response, status, xhr) {
+				container.load(dataHref, function (response, status, xhr) {
 					if ( status == "error" ) {
 						var msg = "读取全文失败";
 						container.html( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
