--- a/cc/index.html
+++ b/cc/index.html
@@ -467,7 +467,7 @@
 						var msg = "读取全文失败";
 						container.html( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
 					} else {
-						parent.addClass("expanded")
+						parent.addClass("expanded");
 					}
 				});
 			});
