fix jQuery selector

--- a/cc/index.html
+++ b/cc/index.html
@@ -458,10 +458,10 @@
 
 		$( ".news-list-item a[role='load-btn']" ).click(function( event ) {
 				event.preventDefault();
-				var dataHref = this.attr("data-href");
-				var container = $(this.attr("aria-controls"));
-				var str = this.attr("aria-controls")
-				var parent = $( str.replace("load-content", "news"));
+				var dataHref = $(this).attr("data-href");
+				var container = $($(this).attr("aria-controls"));
+				var str = $(this).attr("aria-controls");
+				var parent = $( "#" + str.replace("load-content", "news"));
 				container.load(dataHref, function (response, status, xhr) {
 					if ( status == "error" ) {
 						var msg = "读取全文失败";
