fix image width on small screen

--- a/cc/full-text.html
+++ b/cc/full-text.html
@@ -2,7 +2,7 @@
 	<p>David Benioff and D.B. Weiss are going from Winterfell to a galaxy far, far away.</p>
 	<p>It was announced today that Benioff and Weiss, creators of the smash-hit, Emmy Award-winning television series <em>Game of Thrones</em>, will write and produce a new series of <em>Star Wars</em> films.</p>
 	<p>These new films will be separate from both the episodic Skywalker saga and the recently-announced trilogy being developed by Rian Johnson, writer-director of <em>Star Wars: The Last Jedi</em>.</p>
-	<p><img src="david-benioff-db-weiss.jpg" alt="David Benioff and D.B. Weiss" height="361" width="640"></p>
+	<p><img src="david-benioff-db-weiss.jpg" alt="David Benioff and D.B. Weiss"></p>
 	<p>“David and Dan are some of the best storytellers working today,” said Kathleen Kennedy, president of Lucasfilm. “Their command of complex characters, depth of story and richness of mythology will break new ground and boldly push <em>Star Wars</em> in ways I find incredibly exciting.”</p>
 	<p>“In the summer of 1977 we traveled to a galaxy far, far away, and we’ve been dreaming of it ever since,” Benioff and Weiss said in a joint statement. “We are honored by the opportunity, a little terrified by the responsibility, and so excited to get started as soon as the final season of <em>Game of Thrones</em> is complete.”</p>
 	<p>No release dates have been set for the new films, and there have (thankfully) been no sightings of White Walkers around Lucasfilm.</p>
