--- a/cc/index.html
+++ b/cc/index.html
@@ -467,7 +467,8 @@
 						var msg = "读取全文失败";
 						//controler.append( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
 					} else {
-						$(controler .alert).remove();
+						//$(controler .alert).remove();
+						alert(controler);
 						parent.addClass("expanded");
 						controler.append( '<div class="alert alert-secondary" role="alert">' + "AAAAA" + xhr.status + " " + xhr.statusText + '</div>');
 					}
