--- a/cc/index.html
+++ b/cc/index.html
@@ -468,7 +468,7 @@
 						//controler.append( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
 					} else {
 						//$(controler .alert).remove();
-						alert(controler);
+						controler.removeClass("brief");
 						parent.addClass("expanded");
 						controler.append( '<div class="alert alert-secondary" role="alert">' + "AAAAA" + xhr.status + " " + xhr.statusText + '</div>');
 					}
