--- a/cc/index.html
+++ b/cc/index.html
@@ -469,7 +469,7 @@
 					} else {
 						//$(controler .alert).remove();
 						parent.addClass("expanded");
-						controler.append( '<div class="alert alert-secondary" role="alert">' + "AAAAA" + xhr.status + " " + xhr.statusText + '</div>');
+						//controler.append( '<div class="alert alert-secondary" role="alert">' + "AAAAA" + xhr.status + " " + xhr.statusText + '</div>');
 						controler.removeClass("brief");
 					}
 				});
