--- a/cc/index.html
+++ b/cc/index.html
@@ -465,12 +465,10 @@
 				container.load(dataHref, function (response, status, xhr) {
 					if ( status == "error" ) {
 						var msg = "读取全文失败";
-						//controler.append( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
+						controler.append( '<div class="alert alert-secondary" role="alert">' + msg + xhr.status + " " + xhr.statusText + '</div>');
 					} else {
-						//$(controler .alert).remove();
+						$(controler .alert).remove();
 						parent.addClass("expanded");
-						controler.append( '<div class="alert alert-secondary" role="alert">' + "AAAAA" + xhr.status + " " + xhr.statusText + '</div>');
-						controler.removeClass("brief");
 					}
 				});
 			});
