--- a/cc/index.html
+++ b/cc/index.html
@@ -448,8 +448,11 @@
 	<script src="assets/bootstrap-4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script src="assets/clipboard.min.js" crossorigin="anonymous"></script>
 	<script type="text/javascript">
-		$( document ).ready(
-			new Clipboard('.btn-clipboard');
+		//$( document ).ready(
+			
+		//);
+		
+		new Clipboard('.btn-clipboard');
 
 			$( ".news-list-item a[role='load-btn']" ).click(function( event ) {
 				event.preventDefault();
@@ -468,8 +471,6 @@
 					}
 				});
 			});
-			
-		);
 		
 		// var wrap = $(window);
 		// var ad1 = $("#ad-1");
