automatically scroll page to top

--- a/cc/index.html
+++ b/cc/index.html
@@ -448,7 +448,7 @@
 	<script src="assets/bootstrap-4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script src="assets/clipboard.min.js" crossorigin="anonymous"></script>
 	<script type="text/javascript">
-		
+
 		new Clipboard('.btn-clipboard');
 
 		$( ".news-list-item a[role='load-btn']" ).click(function( event ) {
@@ -468,6 +468,8 @@
 				}
 			});
 		});
+
+		$('html, body').scrollTop(0);
 		
 	</script>
 </body>
