--- a/cc/index.html
+++ b/cc/index.html
@@ -259,8 +259,8 @@
 									<div class="col"><label>区块查询:</label> <span><a href="https://www.bitcoin.com" target="_blank">https://www.bitcoin.com</a></span></div>
 								</div>
 								<div class="row">
-									<div class="col-md-2"><label>相关社区:</label></div>
-									<div class="col-md-8">
+									<div class="col-md-auto"><label>相关社区:</label></div>
+									<div class="col-md">
 										<ul class="link-list">
 											<li><a href="https://www.bitcoin.com" target="_blank">https://www.bitcoin.com</a></li>
 											<li><a href="https://www.bitcoin.com" target="_blank">https://www.bitcoin.com</a></li>
