adjust column grid

--- a/cc/index.html
+++ b/cc/index.html
@@ -272,6 +272,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md"><label>简介:</label></div>
+									<div class="w-100"></div>
 									<div class="col-md-auto">
 										<div class="cc-intro">
 											<p>Bitcoin is a cryptocurrency and worldwide payment system.[9]:3 It is the first decentralized digital currency, as the system works without a central bank or single administrator.[9]:1[10] The network is peer-to-peer and transactions take place between users directly, without an intermediary.[9]:4 These transactions are verified by network nodes through the use of cryptography and recorded in a public distributed ledger called a blockchain. Bitcoin was invented by an unknown person or group of people under the name Satoshi Nakamoto[11] and released as open-source software in 2009.[12]</p>
