--- a/vlog.html
+++ b/vlog.html
@@ -17,7 +17,7 @@
 		<h1>Videos</h1>
 
 		<div class="card mb-3">
-			<video class="card-img-top" poster="http://i.dongde.com/videos/miyun_cover.jpg">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/miyun_cover.jpg">
 				<source src="http://i.dongde.com/videos/miyun.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video class="card-img-top" poster="http://i.dongde.com/videos/motoswag_cover.jpg">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/motoswag_cover.jpg">
 				<source src="http://i.dongde.com/videos/motoswag.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video class="card-img-top" poster="http://i.dongde.com/videos/sunnysaturdayriding_cover.jpg">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/sunnysaturdayriding_cover.jpg">
 				<source src="http://i.dongde.com/videos/sunnysaturdayriding.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
