--- a/vlog.html
+++ b/vlog.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weekendwind_cover.jpg">
+			<video controls class="card-img-top" poster="">
 				<source src="http://i.dongde.com/videos/weekendwind.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weilai_cover.jpg">
+			<video controls class="card-img-top" poster="">
 				<source src="http://i.dongde.com/videos/weilai.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -98,6 +98,17 @@
 				<h5 class="card-title">范崎路三岔口</h5>
 				<p class="card-text">一个人，走到哪里算哪里。遇到一队DUKE390车队，好酷。</p>
 				<p class="card-text"><small class="text-muted">2018.10.07</small> <a class="btn btn-light" href="http://i.dongde.com/videos/fanqilu.mp4" role="button">Download</a></p>
+			</div>
+		</div>
+
+		<div class="card mb-3">
+			<video controls class="card-img-top" poster="">
+				<source src="http://i.dongde.com/videos/miaofengshan.mov" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">妙峰山好声音</h5>
+				<p class="card-text">喝彩是路人，没有一个给钱的。</p>
+				<p class="card-text"><small class="text-muted">2018.10.02</small> <a class="btn btn-light" href="http://i.dongde.com/videos/miaofengshan.mov" role="button">Download</a></p>
 			</div>
 		</div>
 
