--- a/vlog.html
+++ b/vlog.html
@@ -102,7 +102,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/miaofengshan_cover.jpg">
 				<source src="http://i.dongde.com/videos/miaofengshan.mov" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -113,6 +113,10 @@
 		</div>
 
 	</div>
+
+	<footer class="text-center">
+		<p>&copy2019， 北京缘聚 MOTOCLUB</p>
+	</footer>
 
 	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
