--- a/vlog.html
+++ b/vlog.html
@@ -12,7 +12,7 @@
 			background: #666;
 		}
 	</style>
-	<title>Videos</title>
+	<title>Motorcycle Ride Videos - 北京缘聚 MOTOCLUB</title>
 	<!-- 北京缘聚摩友群 -->
 </head>
 <body>
