--- a/vlog.html
+++ b/vlog.html
@@ -19,7 +19,7 @@
 	<div class="container-fluid">
 		<div class="jumbotron">
 			<!-- <h1 class="display-4">骑行视频记录</h1> -->
-			<h4 class="">记录美好的景致，分享愉快经历</h4>
+			<h4 class="">记录美好景致，分享愉快经历</h4>
 			<hr class="my-4">
 			<p>由于不会压制视频，微信分享大文件会被压缩成渣，只好放在这里，可下载，不定期更新。</p>
 		</div>
