--- a/vlog.html
+++ b/vlog.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weekendwind_cover.jpg">
 				<source src="http://i.dongde.com/videos/weekendwind.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weilai_cover.jpg">
 				<source src="http://i.dongde.com/videos/weilai.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
