--- a/vlog.html
+++ b/vlog.html
@@ -59,6 +59,17 @@
 		</div>
 
 		<div class="card mb-3">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/sunday_cover.jpg">
+				<source src="http://i.dongde.com/videos/sunday.mp4" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">再走范崎路</h5>
+				<p class="card-text">难得这么好的太阳，虽然前一天也出来了，还是忍不住。</p>
+				<p class="card-text"><small class="text-muted">2019.07.14</small> <a class="btn btn-light" href="http://i.dongde.com/videos/sunday.mp4" role="button">Download</a></p>
+			</div>
+		</div>
+
+		<div class="card mb-3">
 			<video controls class="card-img-top" poster="http://i.dongde.com/videos/sunnysaturdayriding_cover.jpg">
 				<source src="http://i.dongde.com/videos/sunnysaturdayriding.mp4" type="video/mp4">
 			</video>
@@ -77,6 +88,17 @@
 				<h5 class="card-title">官厅水库</h5>
 				<p class="card-text">上了高速，就慢不下来</p>
 				<p class="card-text"><small class="text-muted">2019.06.23</small> <a class="btn btn-light" href="http://i.dongde.com/videos/weekendwind.mp4" role="button">Download</a></p>
+			</div>
+		</div>
+
+		<div class="card mb-3">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/oneride_cover.jpg">
+				<source src="http://i.dongde.com/videos/oneride.mp4" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">漫游十三陵</h5>
+				<p class="card-text">住在城北，想休闲跑，就这条路了。</p>
+				<p class="card-text"><small class="text-muted">2019.06.08</small> <a class="btn btn-light" href="http://i.dongde.com/videos/oneride.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
